deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment

spec:
  replicas: 4
  selector:
    matchLabels:
      app: v1

  template:
    metadata:
      labels:
        app: v1
        version: v2

    spec:
      containers:
      - name: app
        image: nasir590/app:v2
        imagePullPolicy: Always

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
