service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    version: v2
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
