ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nasirk.click   # ya tumhara domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp   # tumhara service name
            port:
              number: 80
